--- a/style.css
+++ b/style.css
@@ -2,7 +2,8 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
-  bottom:0
+  bottom:0;
+  background: "#101010";
   width: 100%;
   height: 100%;
   }
