--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ canvas {
   top: 0;
   left: 0;
   bottom:0;
-  background: "#101010";
+  background-color: "#101010";
   width: 100%;
   height: 100%;
   }
