--- a/style.css
+++ b/style.css
@@ -2,10 +2,12 @@ canvas {
   position: fixed;
   top: 0;
   left: 0;
-  bottom:0;
-  background-color: "#101010";
+  bottom:0
+  z-index: 1;
   width: 100%;
   height: 100%;
+  background-color: '#101010';
+
   }
 
   #content {position: relative; z-index: 2; }
